[fix] fixing premise-dashboard mobile layout issue, & single tile layout issue on recommended-premise-types

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -33,7 +33,6 @@
 
     @include for-phone-only {
       justify-content: center;
-      padding: $molb-body-padding !important;
     }
   }
 
