--- a/src/components/tileGroup/tileGroup.scss
+++ b/src/components/tileGroup/tileGroup.scss
@@ -3,6 +3,7 @@
 .tileGroup {
   display: flex;
   flex-wrap: wrap;
+  flex: 1;
   margin: 0 -15px;
 
   @include for-phone-only {
